--- a/Thuchanh.html
+++ b/Thuchanh.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body style="background-color:#272780;">
     <p><img src="http://bob.codegym.vn/assets/images/Codegym-bob-RIGHTxWH200.png"
             alt="Smiley face" style="float:right;width:42px;height:42px;">
         The image will float to the right of the text.</p>
@@ -14,6 +14,14 @@
     <p><img src="http://bob.codegym.vn/assets/images/Codegym-bob-RIGHTxWH200.png"
             alt="Smiley face" style="float:left;width:42px;height:42px;"><br><br>
         The image will float to the left of the text.</p>
-    
+    <img src="http://bob.codegym.vn/assets/images/Codegym-bob-xh100.png"
+         alt="Codegym map" usemap="#codegymmap" style="width:360px;height:126px;">
+
+    <map name="codegymmap">
+        <area shape="rect" coords="0,0,262,126" alt="Codegym"
+              href="http://codegym.vn"   target="_blank">
+        <area shape="circle" coords="300,58,38" alt="Codegy Bob"
+              href="http://bob.codegym.vn"   target="_blank">
+    </map>
 </body>
 </html>
