--- a/thuchanh2.html
+++ b/thuchanh2.html
@@ -10,5 +10,11 @@
     <li>Tea</li>
     <li>Milk</li>
   </ul>
+  <br>
+  <ul style="list-style-type:disc">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+  </ul>
 </body>
 </html>
